# SickestCarDash

./: .gitignore  CMakeLists.txt  ELM327_OBD_CheatSheet.md  README.md  log
.github/workflows/: ci.yml  main.yml
.scripts/: README.md  allCleanBuildAndTest.sh  buildAndTest.sh  unitTestCleanBuildAndTest.sh
CarDashboard/: qds.cmake
CarDashboard/CarDashboard/: qmldir
CarDashboard/CarDashboard/designer/: plugin.metainfo
CarDashboard/CarDashboardContent/: CMakeLists.txt
DailyDrivingMockUp/: CMakeLists.txt  DailyDrivingMockUp.qmlproject  DailyDrivingMockUp.qmlproject.qtds  qds.cmake
DailyDrivingMockUp/App/autogen/: environment.h
DailyDrivingMockUp/DailyDrivingMockUp/: CMakeLists.txt  Constants.qml  qmldir
DailyDrivingMockUp/DailyDrivingMockUp/designer/: plugin.metainfo
DailyDrivingMockUp/DailyDrivingMockUpContent/: App.qml  CMakeLists.txt  MyRectangle.ui.qml  MyRpm.ui.qml  MySpeedometer.ui.qml  Screen01.ui.qml  UI.ui.qml
QtApp/: CMakeLists.txt  CarDashboard.qmlproject  CarDashboard.qmlproject.qtds  JsonLoader.qml  Main.qml  data.json  main.cpp  qds.cmake
QtApp-Debug/: CMakeCache.txt
QtApp/App/: main.cpp
QtApp/App/autogen/: environment.h
QtApp/CarDashboard/: CMakeLists.txt  Constants.qml
QtApp/CarDashboardContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
QtApp/CarDashboardContent/tests/: TestFrontend.qml
QtApp/Dependencies/Components/src/imports/utils/: .qmlls.ini
QtApp/include/: CircularBuffer.cc  CircularBuffer.h  CircularBufferManager.cc  CircularBufferManager.h  CircularBufferManagerWrapper.h  FrontendConnection.h  IntegrationTests.h  MockQSerialPort.h  OBDHexDecoder.h  OBDPIDRegistry.h  PIDPoller.h  ReplayParser.h  VehicleConnection.h  VehicleParser.h  VehicleSystemManager.h  circularBuffer.h  circularBufferManager.h
QtApp/qt_headers/: QSignalSpy.h
QtApp/replay/data/example_nurburgring_24h/: data_overview_example.csv
QtApp/replay/data/example_nurburgring_24h/data/: 1216.csv  6075.csv  6186.csv  6822.csv  7042.csv  7920.csv  9538.csv  data_overview_example.csv
QtApp/replay/data/nurburgring_24h/: data_overview_nurburgring_24h.csv
QtApp/replay/data/nurburgring_24h/data/: 1451.csv  1843.csv  2349.csv  5054.csv  7041.csv  9027.csv  file.txt
QtApp/replay/data/spa/: data_overview_spa.csv
QtApp/replay/data/spa/data/: 1978.csv  2600.csv  4491.csv  5326.csv  7341.csv  8982.csv  9493.csv
QtApp/src/: CircularBuffer.cc  CircularBufferManager 2.cc  CircularBufferManager.cc  CircularBufferManagerWrapper.cpp  FrontendConnection.cpp  IntegrationTests.cpp  OBDHexDecoder.cpp  OBDPIDRegistry.cpp  PIDPoller.cpp  ReplayParser.cc  VehicleConnection,cpp  VehicleConnection.cpp  VehicleParser.cc  VehicleSystemManager.cpp
QtApp/test/: IntTest_ParserToMiddleware.cpp  MockQSerialPort.cpp  TestCircularBuffer.cc  TestCircularBufferManager.cc  TestCircularBufferManagerWrapper.cpp  TestFrontendConnection.cpp  TestParserToBufferManager.cpp  TestVehicleConnection.cc  TestVehicleParser.cc  readme.md  testCircularBuffer.cc  testCircularBufferManager.cc  testReplayParser.cc
QtApp/test/files/mock_data/brief_mock_data_5_sec/: brief_mock_data_5_sec.csv
QtApp/test/files/mock_data/brief_mock_data_60_sec/: mock_data_60_sec.csv
QtApp/test/qml/: TestFrontend.qml
QtApp/test/testOutputs/: malformed.csv  valid.csv
diagrams/: SCD_Architecture_Overview.drawio
esp32_code/: platformio.ini
esp32_code/src/: main.cc
gui_code/: CMakeLists.txt  JsonLoader.qml  Main.qml  Resources.qrc  main.cpp
pi_code/src/: main.cc
